# world-development-indicators

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: run.yml
.state/iceberg/: wdi.json
.state/local/: wdi.json
assets/wdi/: wdi.py
mappings/: indicator_summaries.json  indicator_table_mapping.csv  indicator_to_col_name.csv  table_metadata.json
schemas/: world_development_indicators.json  world_development_indicators_country_series_metadata.json  world_development_indicators_observation_metadata.json  world_development_indicators_series_metadata.json  world_development_indicators_series_year_metadata.json
src/: connector_utils.py  main.py
src/ingest/: wdi_data.py
src/nodes/: ingest.py  pink_sheet.py  wdi_tables.py
src/subsets_utils/: __init__.py  catalog.py  config.py  dag.py  debug.py  delta.py  duckdb.py  environment.py  http_client.py  io.py  orchestrator.py  publish.py  r2.py  runner.py  tracking.py
src/transforms/: wdi.py
utils/: __init__.py  debug.py
