[project]
name = "world-development-indicators"
version = "0.1.0"
description = "World Bank World Development Indicators data connector"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9.0",
 "boto3",
 "duckdb>=1.3.2",
 "httpx>=0.27.0",
 "pyarrow>=15.0.0",
 "deltalake>=0.17.0",
 "ratelimit>=2.2.1",
 "requests",
 "sqlalchemy>=2.0.43",
 "subsets-client>=0.1.0",
 "tenacity",

    "duckdb",
]
[[project.authors]]
name = "Data Integration Team"
email = "data@integration.io"

